Update backend/src/main/java/com/documed/backend/schedules/TimeSlotController.java